microservice-arch/yml/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gamehub
  namespace: default # 👈 ADD THIS LINE
  labels:
    app: gamehub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gamehub
  template:
    metadata:
      labels:
        app: gamehub
    spec:
      containers:
        - name: gamehub
          image: tejubagalad/playhive-auto-app:latest
          ports:
            - containerPort: 80
          imagePullPolicy: Always
      imagePullSecrets:
        - name: dockerhub-creds
---
apiVersion: v1
kind: Service
metadata:
  name: gamehub-service
  namespace: default
spec:
  selector:
    app: gamehub
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
