microservice-arch/yml/snake.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snake
  labels:
    app: snake
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snake
  template:
    metadata:
      labels:
        app: snake
    spec:
      containers:
        - name: snake
          image: tejubagalad/playhive-auto-snake:latest
          ports:
            - containerPort: 80
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "100m"
            limits:
              cpu: "200m"
      imagePullSecrets:
        - name: dockerhub-creds
---
apiVersion: v1
kind: Service
metadata:
  name: snake-service
spec:
  selector:
    app: snake
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
